force-app/main/default/objects/APTS_Integration_Repository_Params__c/APTS_Integration_Repository_Params__c.object-meta.xml
<CustomObject>
    <label>Integration Repository Param</label>
    <nameField>
        <label>Integration Repository Param Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Repository Params</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>