force-app/main/default/objects/APTS_Integration_Repository_Params__c/fields/APTS_Integration_Repository__c.field-meta.xml
<CustomField>
    <fullName>APTS_Integration_Repository__c</fullName>
    <label>Integration Repository</label>
    <referenceTo>APTS_Integration_Repository__c</referenceTo>
    <relationshipLabel>Integration Repository Params</relationshipLabel>
    <relationshipName>Integration_Repository_Params</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>