force-app/main/default/objects/APTS_Integration_Repository_Params__c/fields/APTS_Param_Type__c.field-meta.xml
<CustomField>
    <fullName>APTS_Param_Type__c</fullName>
    <label>Param Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>Header</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>