force-app/main/default/objects/APTS_Integration_Repository_Params__c/fields/APTS_Param_Value__c.field-meta.xml
<CustomField>
    <fullName>APTS_Param_Value__c</fullName>
    <label>Param Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>